# testify

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  DEMO_GUIDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  sample_test.xlsx  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_one_active_test_guard.py  0003_seed_phash_threshold.py  0004_question_images.py  0005_broadcasts.py
app/: exceptions.py  main.py
app/bot/: bot.py  commands.py  webhook.py
app/bot/callbacks/: __init__.py  broadcast.py  publish.py  receipt.py  test.py
app/bot/filters/: __init__.py  admin_group_only.py  admin_only.py  approved_only.py  photo_only.py
app/bot/handlers/: __init__.py  common.py  onboarding.py  payment.py  test_taking.py
app/bot/handlers/admin/: __init__.py  broadcast.py  operations.py  panel.py  receipts.py  settings.py  tests.py  weblogin.py
app/bot/keyboards/: __init__.py  admin.py  admin_panel.py  common.py  main_menu.py  onboarding.py  payment.py
app/bot/middlewares/: __init__.py  _util.py  db_session.py  error_handler.py  logging.py  throttle.py  user_loader.py
app/bot/states/: __init__.py  admin.py  onboarding.py  payment.py  test_taking.py
app/bot/views/: __init__.py  admin_ops.py  admin_receipt.py  history_screen.py  payment_screen.py  result_screen.py  test_preview.py  test_screen.py
app/core/: config.py  container.py  database.py  i18n.py  logging.py  redis.py  scheduler.py  sentry.py
app/jobs/: _runtime.py  attempt_timer.py  broadcast_runner.py  pending_receipt_reminder.py  registry.py  startup_reconciliation.py
app/models/: __init__.py  admin.py  answer.py  attempt.py  base.py  broadcast.py  question.py  receipt.py  setting.py  test.py  types.py  user.py
app/repositories/: __init__.py  admin_repository.py  answer_repository.py  attempt_repository.py  base.py  broadcast_repository.py  question_repository.py  receipt_repository.py  settings_repository.py  test_repository.py  user_repository.py
app/services/: admin_service.py  attempt_service.py  broadcast_service.py  excel_parser.py  image_hasher.py  notification_service.py  question_validation.py  receipt_service.py  reference_code.py  scoring_service.py  settings_service.py  stats_service.py  test_service.py  user_service.py
app/static/: template.xlsx
app/utils/: datetime.py  markup.py  rate_limiter.py  retry.py  text.py
app/web/: auth.py  db.py  forms.py  keys.py  setup.py
app/web/handlers/: images.py  login.py  tests.py
app/web/static/: panel.css  panel.js
app/web/templates/: _question_card.html  base.html  error.html  login.html  test_editor.html  test_view.html  tests_list.html
docker/: Dockerfile  nginx-entrypoint.sh  nginx.conf.template
docs/: ARCHITECTURE_SPEC.md  DATABASE_SPEC.md  GO_LIVE_CHECKLIST.md  PRODUCT_BLUEPRINT.md  PROMPTS.md  RAILWAY.md  RUNBOOK.md
scripts/: backup.sh  generate_template.py  load_test.py  seed_admin.py  seed_dev.py  wait_for_mysql.py
tests/: conftest.py
tests/integration/flows/: _helpers.py  test_auto_submit_on_expiry.py  test_duplicate_receipt_detection.py  test_full_onboarding_to_first_score.py  test_receipt_rejection_and_retry.py  test_resume_after_restart.py
tests/integration/repositories/: test_admin_repository.py  test_answer_repository.py  test_attempt_repository.py  test_question_repository.py  test_receipt_repository.py  test_settings_repository.py  test_test_repository.py  test_user_repository.py
tests/integration/services/: test_attempt_service.py  test_notification_service.py  test_receipt_service.py  test_settings_service.py  test_test_service.py  test_user_service.py
tests/unit/bot/: test_commands.py  test_webhook_healthz.py
tests/unit/bot/filters/: test_filters.py
tests/unit/bot/handlers/: test_admin_operations.py  test_admin_panel.py  test_admin_receipts.py  test_admin_settings.py  test_admin_tests.py  test_broadcast.py  test_common_menu.py  test_onboarding.py  test_payment.py  test_test_taking.py  test_weblogin.py
tests/unit/bot/keyboards/: test_admin_panel.py  test_main_menu.py
tests/unit/bot/views/: test_admin_ops.py  (+5 more)
tests/unit/core/: test_scrubbers.py
tests/unit/jobs/: test_attempt_timer.py  test_broadcast_runner.py  test_pending_receipt_reminder.py  test_registry.py  test_runtime.py  test_startup_reconciliation.py
tests/unit/services/: test_attempt_service_errors.py  test_excel_parser.py  test_image_hasher.py  test_notification_broadcast.py  test_question_validation.py  test_receipt_service.py  test_reference_code.py  test_scoring_service.py  test_settings_service.py  test_template.py  test_test_service.py  test_user_service.py
tests/unit/utils/: test_markup.py  test_rate_limiter.py  test_text.py
tests/unit/web/: _fakes.py  test_auth.py  test_forms.py  test_panel_auth.py  test_panel_images.py  test_panel_tests.py
(+3 files in other folders)
